# OF_Sequencer_Zturn

./: README.md
OF_Sequencer_Zturn_Vitis_2023.1/: .analytics  MicroZed fast ethernet lwIP BSP working vs not working.pptx
OF_Sequencer_Zturn_Vitis_2023.1/OpticsFoundry_Seq_Zturn_App/: .cproject  .project  OpticsFoundry_Seq_Zturn_App.prj
OF_Sequencer_Zturn_Vitis_2023.1/OpticsFoundry_Seq_Zturn_App/_ide/: hwspec.checksum
OF_Sequencer_Zturn_Vitis_2023.1/OpticsFoundry_Seq_Zturn_App/src/: FireflyControl.c  FireflyControl.h  echo.c  echo.h  lscript.ld  main.c  main.h
OF_Sequencer_Zturn_Vitis_2023.1/OpticsFoundry_Seq_Zturn_App/src/OpticsFoundryCPUCommandSequencer/: CMakeLists.txt  CPUCommandSequencer.c  CPUCommandSequencer.h  OpticsFoundryFPGA.c  OpticsFoundryFPGA.h  command_defs.c  command_defs.h  command_errors.c  command_errors.h  command_impl.c  executor.c  executor.h  label_table.c  label_table.h  name_table.c  name_table.h  parser.c  pid.c  pid.h  readme.txt  registers.c  registers.h  renameCPPtoC.bat  renameCtoCPP.bat
OF_Sequencer_Zturn_Vitis_2023.1/OpticsFoundry_Seq_Zturn_App_system/: .cproject  .project  OpticsFoundry_Seq_Zturn_App_system.sprj
OF_Sequencer_Zturn_Vitis_2023.1/OpticsFoundry_Seq_Zturn_Platform/: .cproject  .project  platform.spr  platform.tcl
OF_Sequencer_Zturn_Vitis_2023.1/OpticsFoundry_Seq_Zturn_Platform/hw/: design_1_wrapper.xsa  ps7_init.tcl  ps7_init_gpl.c
OF_Sequencer_Zturn_Vivado_2023.1/: .gitignore  FireflyControl_1.xpr  helloworld.c  vitis_test_code.c
OF_Sequencer_Zturn_Vivado_2023.1/FireflyControl_1.srcs/sources_1/new/: core.sv  (+7 more)
(+675 files in other folders)
